1.0-devel
=====================

 * some minor i18n tweaks
   [hannosch]

 * Updated INSTALL.txt for CMF 1.5. Zope 2.8 and more
   [tiran]

 * CMF 1.5 / Zope2.8 compatibility:
    o replaced CMFCorePermissions with permissions
    o replaced get_transaction() with transaction
    o removed product argument from TooolInit()
    o logging.getLogger() and LOG.debug() etc.
   [tiran]

 * Greatly enhanced logging during migration.
   [tiran]

 * Chunked migration in smaller pieces. To be continued!
   [tiran]

 * Fixed finalize migration so that it doesn't reinitialize the workflow
   state.  Added unit tests for workflow, local_role, and owner migration.
   [alecm]

 * Using migration code from DynamicViewFTI instead of own FTI migration code
   [tiran]

 * Moved ATCTImageTransform class to lib
   [tiran]

 * Added configuration options for PIL quality and resize algo.
   [tiran]

 * Couple of bug fixes in the FTI->FTI w/ dynamic views migration
   [rafrombrc]

 * Renamed max_size config option to max_file_size. Added max_image_dimension
   config option to set the maximum border for the original size of an image.
   [tiran]

 * Added some additional i18n markup.
   [hannosch]

 * Don't run version migration when installing the first time. People should run it
   after type migration.
   [tiran]

 * Disabled full catalog updated after type migration. If people need it they could
   do it after migration.
   [tiran]

 * Added migration to DynamicFTIs.
   [fschulze]

 * Changed index_html method on ATCTOrderedFolder to gracefully handle
   situation where acquisition of index_html attribute returns None.
   [rafrombrc]

 * Added syndication support to Smart Folders.
   [alecm]

 * Fixing up aliases and actions for CMF 1.5-style browser-default code, using
   CMFDynamicViewFTI.
   [optilude]

 * Some code related to browser default is moved to CMFDynamicViewFTI. All
   new versions of ATCT depend on this product now.
   [tiran]
